folder for pictures

--- a/profiili.html
+++ b/profiili.html
@@ -24,7 +24,7 @@
                         <li><strong>Email:</strong> jhon@example.com</li>
                         <li><strong>Phone Number:</strong> +358...</li>
                         <button id="settings-button">
-                            <img id="settings" src="settings.png" alt="Settings">
+                            <img id="settings" src="pictures/settings.png" alt="Settings">
                         </button>
                     </ul>
                 </div>
