Add header and footer in html

--- a/menu.htm
+++ b/menu.htm
@@ -8,11 +8,33 @@
 </head>
 
 <body>
+    <header>
+        <div class="page-header">
+            <div class="logo">
+                <div id="logo-image"></div>
+                <p>Restaurant name</p>
+            </div>
+            <div class="navigation">
+                <a href="frontpage.html" class="nav-button">Etusivu</a>
+                <a href="frontpage.html" class="nav-button">Ruokalista</a>
+                <a href="frontpage.html" class="nav-button">Rekisteröidy</a>
+                <a href="frontpage.html" class="nav-button">Kirjaudu Sisään</a>
+            </div>
+    </header>
 
     <main>
 
     </main>
 
+    <footer>
+        <div class="contact-info">
+            <p>Ravintolan Nimi</p>
+            <p>Osoite</p>
+            <p>Puhelin numero</p>
+            <p>email@email.com</p>
+            <button id="feedback">Jätä Palautetta!</button>
+        </div>
+    </footer>
 </body>
 
 </html>
