Add menu-container inside main, fix the name of menu.html

--- a/menu.html
+++ b/menu.html
@@ -23,6 +23,16 @@
     </header>
 
     <main>
+        <div class="menu-container">
+            <p>Lisätietoja menun sisällöstä saat klikkaamalla kuvaa</p>
+            <p>Menu1</p>
+            <p>Menun oikea nimi ja kuvaus haetaan tietokannasta</p>
+            <p>Menu2</p>
+            <p>Menun oikea nimi ja kuvaus haetaan tietokannasta</p>
+            <p>Menu3</p>
+            <p>Menun oikea nimi ja kuvaus haetaan tietokannasta</p>
+
+        </div>
 
     </main>
 
