Add css style to footer and header, page.container size and page color

--- a/menu.html
+++ b/menu.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Html for menu</title>
+    <link rel="stylesheet" href="menu.css" />
+    <script src="menu.js" defer></script>
 </head>
 
-<body>
+<body class="webpage">
     <header>
         <div class="page-header">
             <div class="logo">
@@ -37,12 +39,14 @@
     </main>
 
     <footer>
-        <div class="contact-info">
-            <p>Ravintolan Nimi</p>
-            <p>Osoite</p>
-            <p>Puhelin numero</p>
-            <p>email@email.com</p>
-            <button id="feedback">Jätä Palautetta!</button>
+        <div class="page-footer">
+            <div class="contact-info">
+                <p>Ravintolan Nimi</p>
+                <p>Osoite</p>
+                <p>Puhelin numero</p>
+                <p>email@email.com</p>
+                <button id="feedback">Jätä Palautetta!</button>
+            </div>
         </div>
     </footer>
 </body>
