--- a/menu.html
+++ b/menu.html
@@ -18,7 +18,7 @@
             </div>
             <div class="navigation">
                 <a href="frontpage.html" class="nav-button">Etusivu</a>
-                <a href="frontpage.html" class="nav-button">Ruokalista</a>
+                <a href="menu.html" class="nav-button">Ruokalista</a>
                 <a href="frontpage.html" class="nav-button">Rekisteröidy</a>
                 <a href="frontpage.html" class="nav-button">Kirjaudu Sisään</a>
             </div>
