Add public folder for images, add menu images to html

--- a/menu.html
+++ b/menu.html
@@ -26,13 +26,25 @@
 
     <main>
         <div class="menu-container">
-            <p>Lisätietoja menun sisällöstä saat klikkaamalla kuvaa</p>
-            <p>Menu1</p>
+            <h2>Lisätietoja menun sisällöstä saat klikkaamalla kuvaa</h2>
+            <h3>Menu1</h3>
             <p>Menun oikea nimi ja kuvaus haetaan tietokannasta</p>
-            <p>Menu2</p>
+            <h3>Menu2</h3>
             <p>Menun oikea nimi ja kuvaus haetaan tietokannasta</p>
-            <p>Menu3</p>
+            <h3>Menu3</h3>
             <p>Menun oikea nimi ja kuvaus haetaan tietokannasta</p>
+
+            <div class="menu-images">
+                <div class="Menu1">
+                    <img src="./public/menu1.jpg">
+                </div>
+            </div>
+            <div class="Menu2">
+                <img src="./public/menu2.jpg">
+            </div>
+            <div class="Menu2">
+                <img src="./public/menu3.jpg">
+            </div>
 
         </div>
 
