Add effects on menu images

--- a/menu.html
+++ b/menu.html
@@ -36,13 +36,13 @@
 
             <div class="menu-images">
                 <div class="Menu1">
-                    <img src="./public/menu1.jpg">
+                    <img src="./public/menu1.jpg" alt="Pic for Menu 1" class="image-link">
                 </div>
                 <div class="Menu2">
-                    <img src="./public/menu2.jpg">
+                    <img src="./public/menu2.jpg" alt="Pic for Menu 2" class="image-link">
                 </div>
                 <div class="Menu2">
-                    <img src="./public/menu3.jpg">
+                    <img src="./public/menu3.jpg" alt="Menu 3" class="image-link">
                 </div>
             </div>
 
