Modify alignment of elements

--- a/menu.html
+++ b/menu.html
@@ -26,13 +26,15 @@
 
     <main>
         <div class="menu-container">
-            <h2>Lisätietoja menun sisällöstä saat klikkaamalla kuvaa</h2>
-            <h3>Menu1</h3>
-            <p>Menun oikea nimi ja kuvaus haetaan tietokannasta</p>
-            <h3>Menu2</h3>
-            <p>Menun oikea nimi ja kuvaus haetaan tietokannasta</p>
-            <h3>Menu3</h3>
-            <p>Menun oikea nimi ja kuvaus haetaan tietokannasta</p>
+            <div class="menu-text">
+                <h2>Lisätietoja menun sisällöstä saat klikkaamalla kuvaa</h2>
+                <h3>Menu1</h3>
+                <p>Menun oikea nimi ja kuvaus haetaan tietokannasta</p>
+                <h3>Menu2</h3>
+                <p>Menun oikea nimi ja kuvaus haetaan tietokannasta</p>
+                <h3>Menu3</h3>
+                <p>Menun oikea nimi ja kuvaus haetaan tietokannasta</p>
+            </div>
 
             <div class="menu-images">
                 <div class="Menu1">
