Modify html structure so that element alignment is neater and easier to control in css

--- a/menu.html
+++ b/menu.html
@@ -26,28 +26,36 @@
 
     <main>
         <div class="menu-container">
-            <div class="menu-text">
-                <h2>Lisätietoja menun sisällöstä saat klikkaamalla kuvaa</h2>
-                <h3>Menu1</h3>
-                <p>Menun oikea nimi ja kuvaus haetaan tietokannasta</p>
-                <h3>Menu2</h3>
-                <p>Menun oikea nimi ja kuvaus haetaan tietokannasta</p>
-                <h3>Menu3</h3>
-                <p>Menun oikea nimi ja kuvaus haetaan tietokannasta</p>
+            <div class="menu-heading-container">
+                <h2 class="menu-heading">Lisätietoja menun sisällöstä saat klikkaamalla kuvaa</h2>
             </div>
-
-            <div class="menu-images">
-                <div class="Menu1">
-                    <img src="./public/menu1.jpg" alt="Pic for Menu 1" class="image-link">
+            <div class="menu-content">
+                <div class="menu-images">
+                    <div class="Menu1">
+                        <img src="./public/menu1.jpg" alt="Pic for Menu 1" class="image-link">
+                    </div>
+                    <div class="Menu2">
+                        <img src="./public/menu2.jpg" alt="Pic for Menu 2" class="image-link">
+                    </div>
+                    <div class="Menu3">
+                        <img src="./public/menu3.jpg" alt="Menu 3" class="image-link">
+                    </div>
                 </div>
-                <div class="Menu2">
-                    <img src="./public/menu2.jpg" alt="Pic for Menu 2" class="image-link">
-                </div>
-                <div class="Menu2">
-                    <img src="./public/menu3.jpg" alt="Menu 3" class="image-link">
+                <div class="menu-text-container">
+                    <div class="menu-item">
+                        <h3>Menu1</h3>
+                        <p>Menun oikea nimi ja kuvaus haetaan tietokannasta</p>
+                    </div>
+                    <div class="menu-item">
+                        <h3>Menu2</h3>
+                        <p>Menun oikea nimi ja kuvaus haetaan tietokannasta</p>
+                    </div>
+                    <div class="menu-item">
+                        <h3>Menu3</h3>
+                        <p>Menun oikea nimi ja kuvaus haetaan tietokannasta</p>
+                    </div>
                 </div>
             </div>
-
         </div>
 
     </main>
