added header and footer html + css

--- a/profiili.html
+++ b/profiili.html
@@ -9,6 +9,19 @@
         <script src="profiili.js" defer></script>
     </head>
     <body>
+        <header>
+            <div class="page-header">
+                <div class="logo">
+                    <div id="logo-image"></div>
+                    <p>Restaurant name</p>
+                </div>
+                <div class="navigation">
+                    <a href="frontpage.html" class="nav-button">Etusivu</a>
+                    <a href="menu.html" class="nav-button">Ruokalista</a>
+                    <a href="frontpage.html" class="nav-button">Rekisteröidy</a>
+                    <a href="frontpage.html" class="nav-button">Kirjaudu Sisään</a>
+                </div>
+        </header>
         <main>
             <div class="main-container">
                 <section id="profile-name">
@@ -40,5 +53,16 @@
                 </div>
             </div>
         </main>
+        <footer>
+            <div class="page-footer">
+                <div class="contact-info">
+                    <p>Ravintolan Nimi</p>
+                    <p>Osoite</p>
+                    <p>Puhelin numero</p>
+                    <p>email@email.com</p>
+                    <button id="feedback">Jätä Palautetta!</button>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
