--- a/profiili.html
+++ b/profiili.html
@@ -43,11 +43,11 @@
                 </div>
                 <div class="profile-bottom">
                     <section id="vip-status">
-                        <label>VIP-Status</label>
+                        <label id="vip">VIP-Status</label>
                         <p>Since 1.3.2025</p>
                     </section>
                     <section id="adim-status">
-                        <label>Admin Status</label>
+                        <label id="admin">Admin Status</label>
                         <p>No Rights</p>
                     </section>
                 </div>
