--- a/menu/menu.html
+++ b/menu/menu.html
@@ -34,13 +34,13 @@
             <div class="menu-content">
                 <div class="menu-images">
                     <div class="Menu1">
-                        <img src="./public/menu1.jpg" alt="Pic for Menu 1" class="image-link">
+                        <img src="./public/menu1.jpg" alt="Pic for Menu 1" class="image-link" id="menu1-img">
                     </div>
                     <div class="Menu2">
-                        <img src="./public/menu2.jpg" alt="Pic for Menu 2" class="image-link">
+                        <img src="./public/menu2.jpg" alt="Pic for Menu 2" class="image-link" id="menu2-img">
                     </div>
                     <div class="Menu3">
-                        <img src="./public/menu3.jpg" alt="Menu 3" class="image-link">
+                        <img src="./public/menu3.jpg" alt="Menu 3" class="image-link" id="menu3-img">
                     </div>
                 </div>
                 <div class="menu-text-container">
@@ -61,6 +61,29 @@
         </div>
 
     </main>
+
+    <!-- Modals for menu dishes -->
+    <div id="menu1-modal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h3>Menu1</h3>
+            <p>Alkupala, pääruoka ja jälkiruoka haetaan tietokannasta</p>
+        </div>
+    </div>
+    <div id="menu2-modal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h3>Menu2</h3>
+            <p>Alkupala, pääruoka ja jälkiruoka haetaan tietokannasta</p>
+        </div>
+    </div>
+    <div id="menu3-modal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h3>Menu3</h3>
+            <p>Alkupala, pääruoka ja jälkiruoka haetaan tietokannasta</p>
+        </div>
+    </div>
 
     <footer>
         <div class="page-footer">
